<resources>
    <string name="app_name">GDY</string>

    <string name="action_settings">Settings</string>

    <string name="greeting">Welcome to GDY</string>
    <string name="next">NEXT</string>
    <string name="start">START</string>

    <string name="new_game">Start a new game</string>
    <string name="resume_game">Resume an old game</string>
    <string name="title_activity_game_setting">Game Settings</string>

    <string name="num_player">PLAYER NUMBER</string>
    <string name="max_points">MAX POINTS</string>
    <string name="init_points">INITIAL POINTS</string>

    <string name="gdy_file_key">gdy</string>
    <string name="title_activity_player_setting">Player Settings</string>
    <string name="title_activity_winner">Winner</string>

    <string name="winner">The winner of this round is ?</string>
    <string name="title_activity_scoring">Score</string>

    <string name="max">MAX</string>
    <string name="commit">COMMIT</string>
    <string name="next_round">NEXT ROUND</string>
    <string name="or">OR</string>
    <string name="multiple">X</string>
    <string name="cancel">CANCEL</string>
    <string name="rollback">ROLLBACK</string>

    <string name="rollback_toast">RollBack is done.</string>

</resources>
