<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        android:id="@+id/textView"
        android:layout_marginTop="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="60sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="60dp"
        android:width="300dp"
        android:text="@string/new_game"
        android:id="@+id/startButton"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="60dp"
        android:width="300dp"
        android:text="@string/resume_game"
        android:id="@+id/resumeButton"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/startButton"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
